# A-Maze-ing

./: .gitignore  Makefile  README-mazegen.md  README.md  a_maze_ing.py  default_config.txt  dfs.py  gen.py  gui.py  map.py  mazegen-0.1.0-py3-none-any.whl  mlx-2.2-py3-none-any.whl  parser.py  pyproject.toml
mazegen/: README.md  __init__.py  generator.py  maze.py  path_finder.py
mazegen/algo/: __init__.py  dfs.py  prim.py
mazegen/utils/: __init__.py  step.py
parser/: __init__.py  parser.py
ui/: __init__.py
ui/gui/: __init__.py  color.py  gui.py  image.py  renderer.py
ui/tui/: __init__.py  _color.py  _display.py  display.py  tui.py
