[project]
name = "mazegen"
version = "0.1.0"
description = "A maze generator library"
readme = "mazegen/README.md"
requires-python = ">=3.10"
dependencies = []

[[project.authors]]
name = "smahraz"
email = "smahraz@student.1337.ma"

[[project.authors]]
name = "smakkass"
email = "smakkass@student.1337.ma"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen", "mazegen.*"]
